# django_project_5

./: .coverage  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  tasks.py  urls.py
materials/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_alter_lesson_course.py  0003_subscription.py  0004_course_price.py
nginx/: docker-compose.yml
templates/registration/: login.html
users/: models.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_payment.py  0004_payment_payment_url.py  0005_alter_payment_payment_url.py
